[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thetagang-wheel"
version = "0.1.0"
description = "Screen cash-secured puts based on r/thetagang posts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["options", "thetagang", "screening", "reddit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "praw>=7.7.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "pandas-market-calendars>=4.0.0",
    "python-dateutil>=2.8.0",
    "nltk>=3.8.0",
    "regex>=2023.0.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
thetagang-wheel = "thetagang_wheel.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/thetagang-wheel"
Repository = "https://github.com/yourusername/thetagang-wheel"
Issues = "https://github.com/yourusername/thetagang-wheel/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
